--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8">
     <title>blog</title>
   </head>
+  <style media="screen">
+    body{
+      color: green;
+      background: red;
+    }
+  </style>
   <body>
     <h1>hello</h1>
     <h2>yes hello</h2>
